<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".presentation.fragments.SecondOnboardingFragment">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/cloud_2"
        android:layout_width="400dp"
        android:layout_height="400dp"
        android:layout_marginTop="20dp"
        app:srcCompat="@drawable/cloud_2"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/exchange_icon"
        android:layout_width="56dp"
        android:layout_height="56dp"
        android:layout_marginTop="220dp"
        android:src="@drawable/exchange_icon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/cloud_2" />



    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/second_onboarding_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/second_onboarding_title"
        android:textStyle="bold"
        android:textSize="23sp"
        android:fontFamily="sans-serif-thin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/exchange_icon" />

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Second_onboarding_text"
        android:textStyle="italic"
        android:textSize="15sp"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/second_onboarding_title"
    />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/second_onboarding_next_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/get_started_button"
        android:textSize="16sp"
        style="@style/Widget.Material3.Button.IconButton.Outlined"
        />

</androidx.constraintlayout.widget.ConstraintLayout>